--- a/docs/README.Rmd
+++ b/docs/README.Rmd
@@ -4,10 +4,10 @@
 
 -   [x] Anonimizar base
 -   [ ] Base de estudiantes
-    -   [ ] Detectar calidad de `fake_id` (IDs de acudiente)
+    -   [ ] **JD** Modificar código para incorporar nuevas funciones de diccionarios.
+    -   [ ] **JD** Detectar calidad de `fake_id` (IDs de acudiente) 
+    -   [ ] **MJ** Detectar variables de interés, su uniname (yo lo escojo- Descripción que hay en la variable) y uniclass, porcentaje de años por variable.
     -   [ ] Entity resolution para los originales y crear `PER_ID`.
-    -   [ ] Modificar código para incorporar nuevas funciones de diccionarios.
-    -   [ ] Detectar variables de interés, su uniname y uniclass
     -   [ ] Unificar los datos para las variables de interés
     -   [ ] Crear variable de deserción (definición)
     -   [ ] Crear variable de continuidad (misma o diferente institucion)
